--- a/project.json
+++ b/project.json
@@ -1,5 +1,6 @@
 {
     "debugMode"     : 1,
+    "showFPS"       :true,
     "frameRate"     : 60,
     "id"            : "gameCanvas",
     "renderMode"    : 1,
